[package]
name = "nox"
version = "0.1.0"
edition = "2021"
authors = ["nithinmuthukumar", "MrPicklePinosaur"]
description = "game submission for Mini Jam 109"
repository = "https://github.com/HalfPixelStudios/nox"

[features]
default = ["bevy_sprite", "bevy_ui"]
bevy_sprite = ["bevy/bevy_sprite", "bevy/bevy_render"]
bevy_ui = ["bevy/bevy_ui", "bevy/bevy_text", "bevy/bevy_render"]

[dependencies]
bevy = { version = "0.7.0", default-features = false, features = [ "render", "animation", "bevy_winit", "bevy_gilrs", "png", "hdr", "filesystem_watcher", "x11" ] }
bevy_kira_audio = { version = "0.10.0", default-features = false, features = [ "wav" ] }
bevy_rapier2d = { version = "0.14.1", features = ["debug-render"] }
bevy-inspector-egui = { version = "0.11" }
bevy_tweening = { version = "0.4" }
bevy_hanabi = { version = "0.2.0" }

console_error_panic_hook = "0.1"
web-sys = { version = "0.3.4", features = ['Document', 'Element', 'HtmlElement', 'Node', 'Window'] }
wasm-bindgen = "0.2.81"

rand = "0.8.5"
argparse = { git = "https://github.com/MrPicklePinosaur/pino.rs" }

[workspace]
resolver = "2"
